# libretro

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  window.cpp  window.h
.github/workflows/: cmake-single-platform.yml
include/: window.h
include/glad/: glad.h
src/: glad.c  main.cpp  window.cpp
tests/: window.cc
